crates/uitest/fixtures/parser/fn_modifiers.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/fn_modifiers.fe
---
error[1-0001]: duplicate modifier
  ┌─ fn_modifiers.fe:1:5
  │
1 │ pub pub struct Foo {}
  │     ^^^ duplicate modifier

error[1-0001]: duplicate modifier
  ┌─ fn_modifiers.fe:3:9
  │
3 │     pub pub unsafe unsafe fn f() {}
  │         ^^^ duplicate modifier

error[1-0001]: duplicate modifier
  ┌─ fn_modifiers.fe:3:20
  │
3 │     pub pub unsafe unsafe fn f() {}
  │                    ^^^^^^ duplicate modifier

error[1-0001]: `pub` modifier must come before `unsafe`
  ┌─ fn_modifiers.fe:4:12
  │
4 │     unsafe pub fn g() {}
  │            ^^^ `pub` modifier must come before `unsafe`

error[1-0001]: duplicate modifier
  ┌─ fn_modifiers.fe:5:12
  │
5 │     unsafe unsafe pub unsafe pub pub unsafe fn h() {}
  │            ^^^^^^ duplicate modifier

error[1-0001]: `pub` modifier must come before `unsafe`
  ┌─ fn_modifiers.fe:5:19
  │
5 │     unsafe unsafe pub unsafe pub pub unsafe fn h() {}
  │                   ^^^ `pub` modifier must come before `unsafe`

error[1-0001]: duplicate modifier
  ┌─ fn_modifiers.fe:5:23
  │
5 │     unsafe unsafe pub unsafe pub pub unsafe fn h() {}
  │                       ^^^^^^ duplicate modifier

error[1-0001]: duplicate modifier
  ┌─ fn_modifiers.fe:5:30
  │
5 │     unsafe unsafe pub unsafe pub pub unsafe fn h() {}
  │                              ^^^ duplicate modifier

error[1-0001]: duplicate modifier
  ┌─ fn_modifiers.fe:5:34
  │
5 │     unsafe unsafe pub unsafe pub pub unsafe fn h() {}
  │                                  ^^^ duplicate modifier

error[1-0001]: duplicate modifier
  ┌─ fn_modifiers.fe:5:38
  │
5 │     unsafe unsafe pub unsafe pub pub unsafe fn h() {}
  │                                      ^^^^^^ duplicate modifier

error[1-0001]: modifier is not allowed in this block
   ┌─ fn_modifiers.fe:13:5
   │
13 │     pub unsafe fn f(self) {}
   │     ^^^ modifier is not allowed in this block

error[1-0001]: modifier is not allowed in this block
   ┌─ fn_modifiers.fe:13:9
   │
13 │     pub unsafe fn f(self) {}
   │         ^^^^^^ modifier is not allowed in this block


